# askama-minify

./: BLOG.md  Cargo.toml  README.en.md  README.md  README.zh-CN.md  test.sh  test_css_js.html
.github/workflows/: ci.yml  release.yml
src/: args.rs  expand.rs  file_processor.rs  item.rs  lib.rs  loader.rs  main.rs  minifier.rs
src/minifier/: css.rs  html.rs  js.rs  template.rs  util.rs
templates/: from_templates_dir.html
test_templates/: example.html  example.min.html
tests/: compile_fail.rs  minification.rs  proc_macro.rs
tests/templates/: basic.html
tests/ui/: existing_template_attr.rs  existing_template_attr.stderr  missing_file.rs  missing_file.stderr  missing_input.rs  missing_input.stderr  path_and_source.rs  path_and_source.stderr  source_without_ext.rs  source_without_ext.stderr  wrong_item.rs  wrong_item.stderr  wrong_item_with_missing_file.rs  wrong_item_with_missing_file.stderr
