[package]
name = "askama-minify"
version = "0.2.1"
edition = "2024"
authors = ["askama-minify contributors"]
description = "A CLI tool for minifying Askama template files with intelligent comment removal and edge case handling"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
lightningcss = "1.0.0-alpha.68"
