[package]
name = "askama-minify"
version = "0.3.1"
edition = "2024"
authors = ["askama-minify contributors"]
description = "A procedural macro for minifying Askama templates at compile time"
license = "MIT"
readme = "README.md"
repository = "https://github.com/wsafight/askama-minify"
homepage = "https://github.com/wsafight/askama-minify"
documentation = "https://docs.rs/askama-minify"
keywords = ["askama", "template", "minify", "html", "proc-macro"]
categories = ["development-tools", "template-engine", "web-programming"]

[lib]
proc-macro = true

[features]
default = []
advanced-css = ["dep:lightningcss"]

[dependencies]
lightningcss = { version = "1.0.0-alpha.71", default-features = false, optional = true }
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", default-features = false, features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
askama = "0.16.0"
trybuild = "1.0"
